# freeDiameter

./: CMakeLists.txt
contrib/RPM/: README.md  freeDiameter.service  freeDiameter.spec  make_source_tarball.sh  rsyslog-freeDiameter.conf
contrib/debian/: control  freediameter-common.examples  freediameter-common.install  freediameter-debug-tools.install  freediameter-dictionary-3gpp-s6a.install
doc/: dbg_metrics.conf.sample  rt_rewrite.conf.sample
extensions/: CMakeLists.txt
extensions/acl_wl/: aw_conf.y
extensions/app_acct/: acct_conf.y
extensions/app_diameap/: diameap.y
extensions/app_radgw/: rgw_conf.y  rgwx_echodrop.y
extensions/app_redirect/: ard_conf.y
extensions/app_sip/: app_sip.y
extensions/dbg_loglevel/: dbg_loglevel_conf.y
extensions/dbg_metrics/: CMakeLists.txt  dbg_metrics.c  dbg_metrics.conf.sample
extensions/dict_3gpp_gx/: CMakeLists.txt  dict_3gpp_gx.c  dict_gx.c
extensions/dict_gx/: CMakeLists.txt
extensions/dict_legacy_xml/: dict_lxml.y
extensions/dict_s6a/: CMakeLists.txt  dict_s6a.c
extensions/rt_busypeers/: rtbusy_conf.y
extensions/rt_default/: rtd_conf.y  rtd_rules.c
extensions/rt_deny_by_size/: rt_deny_by_size_conf.y
extensions/rt_ereg/: rtereg_conf.y
extensions/rt_rewrite/: rt_rewrite.c  rt_rewrite.h  rt_rewrite_conf.l  rt_rewrite_conf.y  rt_rewrite_conf_support.c  rt_rewrite_conf_support.h
extensions/test_app/: ta_conf.y
extensions/test_netemul/: test_netemul.y
extensions/test_sip/: test_sip.y
libfdcore/: cnxctx.c  fdcore-internal.h  fdd.y  p_dw.c  p_out.c  sctp.c
libfdproto/: messages.c
(+2 files in other folders)
